[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "call_market_price"
version = "0.0.1"
authors = [
  { name="Ross Spoon", email="rspoon@vt.edu" },
]
description = "Calculate the surplus maximizing market price"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rossspoon/call_market_price"